# mathlib-cpp

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  binary.cpp  binary.md  binary_op.cpp  binary_op.md  complex.cpp  const.cpp  conversions.cpp  hexadecimal.cpp  hexadecimal.md  index.cpp  lengthconversion.cpp  matrix.cpp  measure.cpp  mesure.cpp  octal.cpp  octal.md  stats.cpp
.github/workflows/: Ci.yml  awesome_workflow.yml  built.yml  stale.yml
doc/: complex.md  matrix.md  octal.md  stats.md
scripts/: built.sh  out.sh  tester.cpp
test/: basic.cpp  binary.cpp  complex.cpp  const.cpp  conversions.cpp  convertions.cpp  hexadecimal.cpp  index.cpp  matrix.cpp  measure.cpp  octal.cpp  stats.cpp
